# siko

./: .gitignore  Cargo.toml  Makefile  README.md  actor.sk  build.sh  comp_tests.sh  constraints  debug.sh  draft.sk  draw.sh  dynamic_functions.rs  run.sh  siko  simple.rs  simple.sh  simple.sk  simple.sk_  simple.ss  simple2.ss  simplec.sh  test.sh  tests.bat  tests.sh  typesstuff.ss  weird
.github/workflows/: master.yml  rust.yml
crates/siko/: Cargo.toml
crates/siko/src/: main.rs
crates/siko/src/std/: map.sk  prelude.sk  std.sk
crates/siko_cfg/: Cargo.toml
crates/siko_compiler/: Cargo.toml
crates/siko_flow_graph/: Cargo.toml
crates/siko_interpreter/: Cargo.toml
crates/siko_ir/: Cargo.toml
crates/siko_type_checker2/: Cargo.toml
errors/: recursive_class_dep.sk
samples/: do.sk  factorial.sk  import.sk  logic.sk  main.sk
siko_tester/src/: main.rs
sikoc/: Syntax.sk
sikoc/Main/: main.sk
sikoc/Parser/: Parser.sk
sikoc/Syntax/: Class.sk  Data.sk  Expr.sk  Function.sk  Location.sk  Module.sk  Operator.sk  Pattern.sk  Program.sk  (+1 more)
src/: compiler.rs  constants.rs  error.rs  file_manager.rs  interpreter.rs  ir.rs  lexer.rs  main.rs  test.rs  token.rs  util.rs
std/: Char.sk  Data.Bool.sk  Data.Float.sk  Data.Int.sk  Data.List.sk  Data.Map.sk  Data.Option.sk  Data.Ordering.sk  Data.Result.sk  Data.String.sk  Int.sk  Iterator.sk  List.sk  Map.sk  Option.sk  Std.Ops.sk  Std.Util.Basic.sk  String.sk  map.sk  prelude.sk  std.sk
stresstest/: gen.sh
tests/: factorial.ss  float.sk  if.sk  import.sk  lambda.sk  minus.ss  modules.ss  pipe.ss  tuple.sk
(+295 files in other folders)
