[package]
name = "siko"
version = "0.1.0"
authors = ["no <nope>"]
edition = "2018"

[dependencies]
siko_location_info = { path = "../siko_location_info" }
siko_util = { path = "../siko_util" }
siko_ir = { path = "../siko_ir" }
siko_syntax = { path = "../siko_syntax" }
siko_constants = { path = "../siko_constants" }
siko_interpreter = { path = "../siko_interpreter" }
siko_parser = { path = "../siko_parser" }
siko_type_checker = { path = "../siko_type_checker" }
siko_name_resolver = { path = "../siko_name_resolver" }
siko_compiler = { path = "../siko_compiler" }

walkdir = "2"
